// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches PopoverHeader 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h4
  className="c0 sc-kpOJdX hpFqPU"
/>
`;

exports[`Styles matches PopoverHeader h1 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h1
  className="c0 sc-chPdSV gsIoNr"
/>
`;

exports[`Styles matches PopoverHeader h2 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h2
  className="c0 sc-kgoBCf heAfjH"
/>
`;

exports[`Styles matches PopoverHeader h3 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h3
  className="c0 sc-kGXeez hQezwx"
/>
`;

exports[`Styles matches PopoverHeader h4 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h4
  className="c0 sc-kpOJdX hpFqPU"
/>
`;

exports[`Styles matches PopoverHeader h5 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h5
  className="c0 sc-dxgOiQ dVBofo"
/>
`;

exports[`Styles matches PopoverHeader h6 1`] = `
.c0 {
  padding: 0.5rem 0.75rem;
  margin-bottom: 0;
  font-size: 1rem;
  color: inherit;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-top-left-radius: calc(0.3rem - 1px);
  border-top-right-radius: calc(0.3rem - 1px);
}

.c0:empty {
  display: none;
}

<h6
  className="c0 sc-ckVGcZ jbogWf"
/>
`;
